Latest and greatest

--- a/BucBoard/BucBoard/Content/bootstrap.css
+++ b/BucBoard/BucBoard/Content/bootstrap.css
@@ -555,7 +555,7 @@ pre code {
   margin-left: auto;
 }
 
-@media (min-width: 576px) {
+/*@media (min-width: 576px) {
   .container {
     max-width: 540px;
   }
@@ -577,7 +577,7 @@ pre code {
   .container {
     max-width: 1140px;
   }
-}
+}*/
 
 .container-fluid {
   width: 100%;
