--- a/BucBoard/BucBoard/Content/Site.css
+++ b/BucBoard/BucBoard/Content/Site.css
@@ -11,6 +11,7 @@ body {
     padding-top: 50px;
     height: 100%;
     background-image: linear-gradient(to bottom right, #041E42, #FFC72C);
+    background-position: center;
     background-size: auto;
     color: whitesmoke;
     width: auto;
