--- a/BucBoard/BucBoard/Content/bootstrap.css
+++ b/BucBoard/BucBoard/Content/bootstrap.css
@@ -1,4 +1,5 @@
 /*!
+/*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
@@ -555,7 +556,7 @@ pre code {
   margin-left: auto;
 }
 
-/*@media (min-width: 576px) {
+@media (min-width: 576px) {
   .container {
     max-width: 540px;
   }
@@ -577,7 +578,7 @@ pre code {
   .container {
     max-width: 1140px;
   }
-}*/
+}
 
 .container-fluid {
   width: 100%;
