--- a/BucBoard/BucBoard/Views/Dashboard/Dashboard.cshtml
+++ b/BucBoard/BucBoard/Views/Dashboard/Dashboard.cshtml
@@ -1,5 +1,5 @@
 ﻿@using BucBoard.Models
-@model User, UserListModel
+@model MultipleModelPass
 
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -14,8 +14,7 @@
         margin: 0;
         font-family: Arial;
         background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+        background-size: auto;
     }
 
     html {
@@ -30,7 +29,7 @@
         cursor: pointer;
         padding: 15px 15px;
         font-size: 17px;
-        width: 20%;
+        width: 25%;
     }
 
         /* Style tab links */
@@ -200,7 +199,6 @@
 <button class="tablink" onclick="openPage('OfficeHours', this, '#041E42')">Office Hours</button>
 <button class="tablink" onclick="openPage('Profile', this, '#041E42')">Profile</button>
 <button class="tablink" onclick="openPage('Alerts', this, '#041E42')">Alerts</button>
-<button class="tablink" onclick="openPage('Manage Users', this, '#041E42')">Manage Users</button>
 
 <div id="Live" class="tabcontent">
     <div class="w3-container w3-center w3-animate-bottom">
@@ -358,21 +356,28 @@
     </div>
 </div>
 
-<div id="Manage Users" class="tabcontent">
-    <div class="w3-container w3-center w3-animate-bottom">
-        <h3>Manage Users</h3>
-        <br />
-        <!--List of users-->
+<div class="row">
+    <div class="col">
+        <a onclick="present()">
+            <img src="~/Images/Present.png" width="40%" height="100%" class="buttonPress" align="middle" />
+        </a>
+    </div>
+
+
+    <div class="col">
+        @if (Model.MyUser.isAdmin == 1)
+        {
+            <div>
+                <a href="@Url.Action("Manage", "Dashboard")">
+                    <img src="~/Images/ManageUsers.png" width="40%" height="70%" class="buttonPress" align="right" />
+                </a>
+            </div>
+        }
     </div>
 </div>
 
 <br />
 
-<div>
-    <a onclick="present()">
-        <img src="~/Images/HomePageButton.png" width="20%" height="20%" class="buttonPress" align="right" />
-    </a>
-</div>
 
 @section Scripts{
     <script>
